argocd/manifests/open-notebook/base/middleware-oauth2-forwardauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: open-notebook-oauth2-forwardauth
  namespace: open-notebook
spec:
  forwardAuth:
    address: http://10.43.210.84:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
      - Authorization
