argocd/manifests/open-notebook/base/service-oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: open-notebook
  labels:
    app: oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
spec:
  type: ClusterIP
  clusterIP: 10.43.210.84
  selector:
    app: oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: 4180
      protocol: TCP
