argocd/manifests/open-notebook/base/service-open-notebook.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-notebook
  namespace: open-notebook
  labels:
    app: open-notebook
    app.kubernetes.io/name: open-notebook
spec:
  type: ClusterIP
  selector:
    app: open-notebook
  ports:
    - name: frontend
      port: 8502
      targetPort: 8502
      protocol: TCP
