argocd/manifests/open-notebook/base/service-surrealdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: surrealdb
  namespace: open-notebook
  labels:
    app: surrealdb
    app.kubernetes.io/name: surrealdb
spec:
  type: ClusterIP
  selector:
    app: surrealdb
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
