argocd/manifests/open-notebook/base/ingress-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-notebook-oauth2-proxy-ingress
  namespace: open-notebook
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: notebook.levangie.dev
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
