argocd/manifests/open-notebook/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-notebook-ingress
  namespace: open-notebook
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: open-notebook-open-notebook-oauth2-errors@kubernetescrd,open-notebook-open-notebook-oauth2-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: notebook.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-notebook
                port:
                  number: 8502
